# RM2022_master_base

./: .gitattributes  .gitignore  README.md
init_tools/: README.md  launch_daemon.sh  launch_each.sh  launch_ext.sh  scurm.service
rm_base/: CMakeLists.txt  README.md  package.xml
rm_base/config/: base_param.yaml
rm_base/include/rm_base/: fixed_packet.hpp  fixed_packet_tool.hpp  robot_base_node.hpp  simple_robot_base_node.hpp  transporter_interface.hpp  uart_transporter.hpp
rm_base/launch/: base_node.launch.py  serial_recv.launch.py  serial_send.launch.py  test_all_up.launch.py  test_infantry_recv.launch.py  test_serial_recv.launch.py  test_serial_send.launch.py
rm_base/src/: TEST_mode_get_client.cpp  TEST_subscribtion_node.cpp  robot_base_main.cpp  robot_base_node.cpp  simple_robot_base_main.cpp  simple_robot_base_node.cpp
rm_base/src/transporter_driver/: uart_transporter.cpp
rm_base/test/: TEST_mode_get_client.cpp  TEST_simple_robot_base_node.cpp  TEST_subscribtion_node.cpp  simple_robot_base_node.cpp  simple_robot_base_node.hpp
rm_cam/: CMakeLists.txt  README.md  package.xml
rm_cam/config/: 048021610077.Config  049080710063.Config  cam_param.yaml
rm_cam/dependencies/DaHengGxiSDK/lib/x86_64/: GxGVTL.cti.REMOVED.git-id  libgxiapi.so.REMOVED.git-id
rm_cam/dependencies/MVSDK/include/: CameraApi.h.REMOVED.git-id
rm_cam/dependencies/MVSDK/lib/arm/: libMVSDK.so.REMOVED.git-id
rm_cam/dependencies/MVSDK/lib/arm_softfp/: libMVSDK.so.REMOVED.git-id
rm_cam/include/rm_cam/: cam_client.hpp  cam_interface.hpp  cam_server.hpp  daheng_cam_node.hpp  mindvision_cam.hpp  mindvision_cam_node.hpp  virtual_cam.hpp  virtual_cam_node.hpp  wrapper_client.hpp
rm_cam/launch/: daheng_cam_launch.py  mindvision_cam.launch.py  virtual_cam.launch.py
rm_cam/resource/: 1.mp4.REMOVED.git-id  dog.jpg.REMOVED.git-id  test.jpg.REMOVED.git-id  video9.mp4.REMOVED.git-id
rm_cam/src/: cam_client.cpp  cam_server.cpp  daheng_cam_node.cpp  daheng_cam_node_main.cpp  mindvision_cam_node.cpp  mindvision_node_main.cpp  virtual_cam_node.cpp  virtual_cam_node_main.cpp  wrapper_client.cpp
rm_cam/src/cam_driver/: daheng_cam.cpp  mindvision_cam.cpp  virtual_cam.cpp
rm_entity_cam/: CMakeLists.txt  README.md  package.xml
rm_entity_cam/config/: 048021610077.Config  048021610078.Config  KN0210040023.yaml  cam_param.yaml  daheng_cam_config.txt  ost.yaml
rm_entity_cam/dependencies/DaHengGxiSDK/include/: GxIAPI.h.REMOVED.git-id
rm_entity_cam/dependencies/DaHengGxiSDK/lib/armv8/: GxGVTL.cti  GxGVTL.cti.REMOVED.git-id  GxU3VTL.cti  GxU3VTL.cti.REMOVED.git-id  libgxiapi.so.REMOVED.git-id
rm_entity_cam/dependencies/DaHengGxiSDK/lib/x86_64/: GxGVTL.cti  GxU3VTL.cti  GxU3VTL.cti.REMOVED.git-id
rm_entity_cam/dependencies/MVSDK/include/: CameraApi.h.REMOVED.git-id
rm_entity_cam/dependencies/MVSDK/lib/arm64/: libMVSDK.so.REMOVED.git-id
rm_entity_cam/dependencies/MVSDK/lib/x64/: libMVSDK.so.REMOVED.git-id
rm_entity_cam/dependencies/MVSDK/lib/x86/: libMVSDK.so.REMOVED.git-id
rm_entity_cam/include/rm_entity_cam/: daheng_cam.hpp  daheng_cam_node.hpp  mindvision_cam.hpp  mindvision_cam_node.hpp
rm_entity_cam/launch/: daheng_cam.launch.py  mindvision_cam.launch.py
rm_entity_cam/src/: daheng_cam_node.cpp  daheng_cam_node_main.cpp  mindvision_cam_node.cpp  mindvision_cam_node_main.cpp
rm_entity_cam/src/cam_driver/: daheng_cam.cpp  mindvision_cam.cpp
rm_interfaces/: CMakeLists.txt  README.md  package.xml
rm_interfaces/include/rm_interfaces/: qos_policy.hpp
rm_interfaces/msg/: Gimbal.msg  GimbalCmd.msg  GyroAttitude.msg  GyroQuaternions.msg  ShootSpeed.msg
rm_interfaces/srv/: GetCameraInfo.srv  GetColor.srv  GetMode.srv  GetShootSpeed.srv  SetColor.srv  SetMode.srv
