<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_cam</name>
  <version>0.0.1</version>
  <description>
  Camera package for SCRM_ROS. Provide camera drivers for each cam.
  </description>
  <maintainer email="ericc_feng@qq.com">Eric Feng</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rmoss_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
