<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_cam</name>
  <version>0.0.1</version>
  <description>
  Camera package for SCRM_ROS. Provide camera drivers for each cam.
  </description>
  <maintainer email="ericc_feng@qq.com">Eric Feng</maintainer>
  <maintainer email="2646677495@qq.com">Holakk Li</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rm_interfaces</build_depend>
  <exec_depend>rm_interfaces</exec_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
