<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rm_interfaces</name>
    <version>0.0.1</version>
    <description>ROS2 interfaces (.msg, .srv) used in the SCURM_ROS.</description>
    <maintainer email="ericc_feng@qq.com">Eric Feng</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
    
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    
    <member_of_group>rosidl_interface_packages</member_of_group>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>